# Directed-Research-HPC

./: .gitignore  README.md  notes.txt
C_Matrix/: CMakeLists.txt  Main.s  Matrix.s  README.md  Test.s
C_Matrix/include/: Matrix.h  Matrix.h.gch
C_Matrix/scripts/: CMakeCache.txt  Makefile  build_run.sh  cmake_install.cmake  compile_commands.json  memcheck.sh  run.sh
C_Matrix/test/: Main.c  Test.c  Test.h
